# Jigyasa

./: .gitignore  LICENSE  Makefile.harness  NOTICE.md  PLANS.md  README.md  SETUP.md  pyproject.toml  requirements.txt  skills-lock.json  test_audio.py  test_fallback.py  test_snr_script.py
.agents/: AGENTS.md
.agents/skills/harness-engineering-playbook/: LICENSE  README.md  SKILL.md
.github/workflows/: harness.yml
Interface/: index.html  package-lock.json  package.json  vite.config.js
Interface/src/: App.jsx  index.css
Interface/src/components/: EnsemblePanel.jsx  NavBar.jsx  ReportPane.jsx  ReportsView.jsx  RiskDisplay.jsx  SourcePanel.jsx  Sparkline.jsx  StatusBar.jsx  TimelineTable.jsx  WhyFlagged.jsx
Interface/src/context/: VoiceShieldContext.jsx
docs/: ARCHITECTURE.md  ARCHITECTURE_ASCII.md  OBSERVABILITY.md  PITCH.md  REPLAY_FINDINGS.md  Stage_1.md  planning.txt
docs/presentation/: VoiceShield_Jigyasa_UCOPSB.pptx
models/replay_lora/: README.md  adapter_config.json  adapter_model.safetensors  head.pt
scripts/: bench_detection.py  build_deck.py  build_evalset.py  build_fixtures.py  build_hindi_eval.py  convert_nii.py  download_model.py  echofake_pilot.py  eval_models.py  eval_nii.py  eval_replay_pa.py  fetch_benchmark.py  fetch_pa2019.py  fetch_replay_data.py  finetune_replay.py  run_browser.py  run_file.py  run_live.py  telephony_eval.py  train_replay.py  train_replay_aug.py
scripts/harness/: lint.sh  smoke.sh  test.sh  typecheck.sh
tasks/: findings.md  handoff.md  lessons.md  progress.md  todo.md
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/integration/: test_cascade.py  test_hf_models.py  test_pipeline_flow.py  test_silence_transitions.py  test_stage2_flow.py
tests/unit/: test_config.py  test_logger.py
tests/unit/audio/: __init__.py  test_buffer.py  test_resample.py  test_source.py
tests/unit/classifier/: test_fallback.py  test_phase_pitch.py  test_state_mapper.py
voiceshield/: config.py  logger.py
voiceshield/analysis/: __init__.py  speaker_drift.py
voiceshield/api/: app.py  rest.py  rest_v2.py  ws.py
voiceshield/audio/: __init__.py  buffer.py  resample.py  source.py  stream_source.py
voiceshield/classifier/: __init__.py  _infer_lock.py  aasist_inference.py  aasist_loader.py  aasist_model.py  codec_scorer.py  fallback.py  hf_scorer.py  nii_scorer.py  phase_pitch.py  protocol.py  replay_scorer.py  state_mapper.py  watermark_scorer.py
voiceshield/evidence/: __init__.py  export.py  report.py  report_template.html
voiceshield/features/: __init__.py  artifact.py  flux.py  lfcc.py  mfcc.py  phase.py  pitch.py  scalars.py  silero_vad.py  snr.py  spectrogram.py  subband.py  vad.py
voiceshield/pipeline/: explain.py  runner.py  state_engine.py  timeline.py
voiceshield/replay/: __init__.py  detectors.py
voiceshield/ui/: app.js  index.html  style.css
(+40 files in other folders)
