[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceshield"
version = "1.0.0"
description = "VoiceShield Stage 1 — Real-time AI Voice Fraud Detection"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["voiceshield*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# deck generator: compact shape-styling statements are fine there
"scripts/build_deck.py" = ["E701", "E702"]
