[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceshield"
version = "1.0.0"
description = "VoiceShield — Real-time AI Voice Fraud Detection"
requires-python = ">=3.11"
# Core runtime deps (CPU-friendly) so `uv sync` builds an importable env
# for CI lint/typecheck/unit tests. Heavy optional detectors (speechbrain,
# audioseal, fairseq, sounddevice) are intentionally excluded — every
# feature that uses them degrades gracefully when absent (lazy import →
# fallback), so the unit suite passes without them. Install the full stack
# for a GPU deployment via requirements.txt.
dependencies = [
    "numpy>=1.24,<2.5",
    "scipy>=1.11",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40",
    "pillow>=10.0",
    "fastapi>=0.103",
    "uvicorn>=0.23",
    "websockets>=11.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["voiceshield*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored verbatim from the Codecfake repo (CC BY-NC-ND — must not be edited).
extend-exclude = ["voiceshield/classifier/_codecfake"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# deck generator: compact shape-styling statements are fine there
"scripts/build_deck.py" = ["E701", "E702"]
